<resources>
    <string name="app_name">Zabaki</string>
    <string name="zabaki_logo_button">Zabaki Logo Button</string>
    <string name="live_location">Live Location</string>
    <string name="menu">Menu</string>
    <string name="click_the_button_for_emergency">Click the Button for Emergency</string>
    <string name="todo">TODO</string>
    <string name="Back">Back to the home Screen</string>
    <string name="my_api_key">AIzaSyBPHNghT2-5mEVXXdL7cuOBV1aAp8OTbz0</string>
    <string name="show_location">Show location</string>
    <string name="type_address_here">Type address here</string>
    <string name="default_sos_message">Help me!! I\'m in Critical Situation</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="note_these_contacts_are_saved_locally">Note: These Contacts are saved locally</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="save">Save</string>
    <string name="view_contacts">View Contacts</string>
    <string name="you_can_add_up_to_5_contacts">(You can add up to 5 contacts)</string>
    <string name="add_contact">Add Contact</string>
    <string name="_50_words_only">(50 Words Only)</string>
    <string name="this_massage_along_with_your_current_location_sent_your_emergency_contacts_when_you_press_the_button">(This massage along with your current location sent your Emergency Contacts when you press the button)</string>
    <string name="help_me_i_m_in_critical_situation">Help me!! I’m in Critical Situation</string>
    <string name="sos_message">SOS Message</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="_2_edit_or_delete_your_emergency_contacts_under_menu_manage_contacts"><![CDATA[2. Edit or Delete your emergency Contacts under MENU -> Manage Contacts]]></string>
    <string name="_1_add_your_emergency_contacts_under_menu_register_number"><![CDATA[1. Add your emergency contacts under MENU -> Register Number]]></string>
    <string name="_5_you_always_keep_your_gps_turned_on_so_that_your_device_accurately_so_your_live_location">5. You always keep your GPS turned on so that your device accurately so your live location</string>
    <string name="_6_click_sos_button_zabaki_on_homescreen_to_send_your_alert_and_live_location_to_your_emergency_contacts">6. Click SOS Button(ZABAKI) on HomeScreen to send your alert and live location to your Emergency Contacts</string>
    <string name="_3_edit_your_sos_massage_under_menu_edit_sos_massage_if_you_want"><![CDATA[3. Edit your SOS Massage under MENU -> Edit SOS Massage (If You want!)]]></string>
    <string name="_4_you_can_view_your_live_location_and_search_near_hospitals_pharmacies_and_police_sations_for_click_live_location_button_home_screen">4. You can view your Live Location and search near Hospitals, Pharmacies and Police Sations for click LIVE Location Button(HOME SCREEN)</string>
    <string name="police_station">Police Station</string>
    <string name="hospital">Hospital</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="manage_contacts">Manage Contacts</string>
    <string name="self_defence">Self-Defence</string>
    <string name="instructions_1">Instructions</string>
    <string name="self_defence_videos">Self Defence Videos</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="save_changes">Save Changes</string>
</resources>