<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionActivity"
    tools:layout_editor_absoluteX="-9dp"
    tools:layout_editor_absoluteY="60dp"
    android:background="#D2D2D2">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        app:srcCompat="@drawable/arrow_small_left" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="338dp"
        android:layout_height="51dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_1_add_your_emergency_contacts_under_menu_register_number"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.022"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="336dp"
        android:layout_height="127dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_4_you_can_view_your_live_location_and_search_near_hospitals_pharmacies_and_police_sations_for_click_live_location_button_home_screen"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.031"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="338dp"
        android:layout_height="51dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_2_edit_or_delete_your_emergency_contacts_under_menu_manage_contacts"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="336dp"
        android:layout_height="81dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_5_you_always_keep_your_gps_turned_on_so_that_your_device_accurately_so_your_live_location"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.036"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="338dp"
        android:layout_height="51dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_3_edit_your_sos_massage_under_menu_edit_sos_massage_if_you_want"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.026"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="338dp"
        android:layout_height="100dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_6_click_sos_button_zabaki_on_homescreen_to_send_your_alert_and_live_location_to_your_emergency_contacts"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.086"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="@string/instructions"
        android:elevation="8dp"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

</androidx.constraintlayout.widget.ConstraintLayout>