<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditSOSMassageActivity"
    android:background="#D2D2D2">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        app:srcCompat="@drawable/arrow_small_left" />

    <TextView
        android:id="@+id/sosNoteTextView"
        android:layout_width="292dp"
        android:layout_height="66dp"
        android:fontFamily="sans-serif"
        android:text="@string/this_massage_along_with_your_current_location_sent_your_emergency_contacts_when_you_press_the_button"
        android:textColor="#455A64"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sosTextView"
        app:layout_constraintVertical_bias="0.002"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/_50_words_only"
        android:textColor="#455A64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="260dp"
        android:layout_height="58dp"
        android:backgroundTint="#0D3B66"
        android:elevation="8dp"
        android:fontFamily="@font/anton"
        android:gravity="center"
        android:includeFontPadding="false"
        android:padding="0dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.124"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_corner_edit_text"
        android:backgroundTint="#FAF0CA"
        android:ems="10"
        android:elevation="8dp"
        android:fontFamily="@font/anton"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="#000000"
        android:text="@string/help_me_i_m_in_critical_situation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sosNoteTextView"
        app:layout_constraintVertical_bias="0.063"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/sosTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="@string/sos_message"
        android:elevation="8dp"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355" />


</androidx.constraintlayout.widget.ConstraintLayout>