<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactActivity"
    android:background="#D2D2D2">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/todo"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        app:srcCompat="@drawable/arrow_small_left" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="@string/add_contact"
        android:textColor="#000000"
        android:textSize="40sp"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/you_can_add_up_to_5_contacts"
        android:textColor="#455A64"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.110000014" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_corner_edit_text"
        android:backgroundTint="#FFFFFF"
        android:elevation="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.175"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_corner_edit_text"
        android:backgroundTint="#FFFFFF"
        android:elevation="8dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="phone"
        android:padding="15dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintVertical_bias="0.065"
        tools:ignore="Autofill,TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="260dp"
        android:layout_height="58dp"
        android:backgroundTint="#0D3B66"
        android:elevation="8dp"
        android:fontFamily="@font/anton"
        android:gravity="center"
        android:includeFontPadding="false"
        android:padding="0dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.14"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_these_contacts_are_saved_locally"
        android:textColor="#455A64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/viewContactsBtn"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_corner_add_contact_btn"
        android:clickable="true"
        android:elevation="8dp"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:paddingEnd="5dp"
            android:paddingBottom="3dp"
            android:text="@string/view_contacts"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/users"
            android:backgroundTint="#000000"
            android:contentDescription="@string/todo" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>