<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2D2D2"
    tools:context=".EditContactActivity">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        app:srcCompat="@drawable/arrow_small_left" />

    <TextView
        android:id="@+id/textViewEditContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:fontFamily="@font/anton"
        android:text="@string/edit_contact"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <LinearLayout
        android:id="@+id/editContactForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_corner_add_contact_btn"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditContact">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner_edit_text"

            android:elevation="8dp"
            android:ems="10"
            android:hint="@string/name"
            android:textColor="#000000"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColorHint="#888888" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:elevation="8dp"
            android:ems="10"
            android:textColor="#000000"
            android:background="@drawable/rounded_corner_edit_text"
            android:hint="@string/number"
            android:inputType="phone"
            android:padding="12dp"
            android:textColorHint="#888888" />

        <Button
            android:id="@+id/buttonSaveContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#0D3B66"
            android:elevation="8dp"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp"
            android:text="@string/save_changes"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
