<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2D2D2">

    <androidx.cardview.widget.CardView
        android:id="@+id/logoCard"
        android:layout_width="213dp"
        android:layout_height="213dp"
        android:layout_marginTop="170dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="106dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/zabaki_logo_button"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/sos_button"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/click_the_button_for_emergency"
        android:textColor="#7A8D95"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/logoCard"
        app:layout_constraintStart_toStartOf="@+id/logoCard"
        app:layout_constraintTop_toBottomOf="@+id/logoCard" />

    <Button
        android:id="@+id/liveLocationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:width="320dp"
        android:height="53dp"
        android:backgroundTint="#FAF0CA"
        android:fontFamily="@font/anton"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/live_location"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#0D3B66"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/menuBtn"
        app:layout_constraintEnd_toEndOf="@+id/menuBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/menuBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/menuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:width="320dp"
        android:height="53dp"
        android:backgroundTint="#FAF0CA"
        android:fontFamily="@font/anton"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textColor="#0D3B66"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/instructionsImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        app:srcCompat="@drawable/exclamation"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>